--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,19 +16,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Corider"
         tools:targetApi="31">
+
+        <activity
+            android:name=".Admin_home_page"
+            android:exported="false" />
+        <activity
+            android:name=".PublishSucess"
+            android:exported="false" />
+        <activity
+            android:name=".RidePublishForm2"
+            android:exported="false" />
+        <activity
+            android:name=".toDestination"
+            android:exported="false" />
+        <activity
+            android:name=".RidePublishForm"
+            android:exported="false" />
+        <activity
+            android:name=".PublishActivity"
+            android:exported="true" />
+
+
         <activity
             android:name=".SignActivity"
             android:exported="false" />
-
         <activity
             android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".StartActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Splash_Screen"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,8 +50,20 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".StartActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Splash_Screen"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true" />
+
+
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_API_KEY_HERE" />
     </application>
 
 </manifest>
