--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.fragment:fragment:1.8.3'
+    implementation 'androidx.fragment:fragment:1.8.5'
 
     // Firebase BoM (manages Firebase SDK versions)
     implementation platform('com.google.firebase:firebase-bom:32.1.1')
@@ -74,8 +74,14 @@ dependencies {
     // Remove the duplicate Firebase database dependency
     // implementation 'com.google.firebase:firebase-database:21.0.0'  // Remove this line
 
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+
+
+
     // Testing libraries
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
 }
