--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+
 
     <application
         android:allowBackup="true"
@@ -16,32 +21,34 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Corider"
         tools:targetApi="31">
+        <activity
+            android:name=".Publishmap1"
+            android:exported="false" >
 
+        </activity>
+        <activity
+            android:name=".RegisteredUsersActivity"
+            android:exported="true" />
         <activity
             android:name=".Admin_home_page"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".PublishSucess"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".RidePublishForm2"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".toDestination"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".RidePublishForm"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".PublishActivity"
             android:exported="true" />
-
-
         <activity
-            android:name=".SignActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
+            android:name=".StartActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -50,13 +57,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".StartActivity"
-            android:exported="false" />
+            android:name=".SignActivity"
+            android:exported="true" />
         <activity
-            android:name=".Splash_Screen"
-            android:exported="false" />
+            android:name=".LoginActivity"
+            android:exported="true" />
+
         <activity
             android:name=".MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Splash_Screen"
             android:exported="true" />
 
 
